--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             </div>
                         </div>
                         <div class="card-body pb-2">
-                           <h6> &amp; HTML @ CSS</h6>
+                           <h6>  HTML @ CSS</h6>
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 97%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
